2008-08-18  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-indexer-module.[ch]:
	* src/tracker-indexer/tracker-indexer.c:
	* src/tracker-indexer/tracker-module.h: Move the module_name parameter
	from TrackerFile to PathInfo, such information is internal to the
	indexer, and modules shouldn't have to care about their own name.

2008-08-18  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-indexer-module.c
	(tracker_indexer_module_file_get_uri): Set dirname/basename to NULL if
	the function is going to return FALSE.
	* src/tracker-indexer/tracker-indexer.c (create_update_item): Check
	that the module could get the URI for the element being processed.

2008-08-18  Carlos Garnacho  <carlos@imendio.com>

        * src/tracker-indexer/modules/evolution.c
        (get_mail_storage_type_from_path): Ignore "Sent" folders.
        (get_mbox_uri): Remove ".sbd" from directory names, Evolution won't
        recognize that.

2008-8-18   Mikael Ottela    <mikael.ottela@ixonos.com>
	* src/trackerd/tracker-search.c:
	* src/trackerd/tracker-search.h:
	* src/trackerd/tracker-rdf-query.c:
	* src/trackerd/tracker-rdf-query.h:
	* src/libtracker/tracker.h:
	* src/libtracker/tracker.c:
	* data/dbus/tracker-search.xml: Added sorting fields to rdf-queries.
	Fixed some problems with error reporting.

	* src/trackerd/tracker-metadata.c: Fixed limit and offset in unique
	values queries.
	

2008-08-18  Philip Van Hoof  <philip@codeminded.be>

	* src/libtracker-db/tracker-db-index.c: Added a FIXME comment
	* ChangeLog: changed my E-mail address

2008-08-18  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-ontology.c:
	* src/libtracker-common/tracker-type-utils.c:
	* src/libtracker-db/tracker-db-file-info.c:
	* src/libtracker-db/tracker-db-manager.c: 
	* src/libtracker-gtk/tracker-metadata-tile.c:
	* src/tracker-extract/tracker-extract-html.c:
	* src/tracker-extract/tracker-extract-jpeg.c: